# ai_assistant_parsers_template

./: .gitignore  LICENSE  README.md  README.rst  cookiecutter.json  pyproject.toml
examples/ai_assistant_parsers_spbu/: .gitignore  README.md  pyproject.toml
examples/ai_assistant_parsers_spbu/output/parse_one/300_c48edf1d40/: meta.json  result.html  result.md
examples/ai_assistant_parsers_spbu/output/parse_one/_8e69783634/: meta.json  result.html  result.md
examples/ai_assistant_parsers_spbu/output/parse_one/abiturient_a198a48637/: meta.json  result.html  result.md
examples/ai_assistant_parsers_spbu/output/parse_one/agym_ce699a7257/: meta.json  result.html  result.md
examples/ai_assistant_parsers_spbu/output/parse_one/apmath_91d01e58fa/: meta.json  result.html  result.md
examples/ai_assistant_parsers_spbu/output/parse_one/campus_da7b2b51bc/: meta.json  result.html  result.md
examples/ai_assistant_parsers_spbu/output/parse_one/cdop.chem_78fbe6e623/: meta.json  result.html  result.md
examples/ai_assistant_parsers_spbu/output/parse_one/csd_c6c0e66873/: meta.json  result.html  result.md
examples/ai_assistant_parsers_spbu/output/parse_one/diaghilevmuseum_735ea8032f/: meta.json  result.html  result.md
examples/ai_assistant_parsers_spbu/output/parse_one/edu_ed178d2cfa/: meta.json  result.html  result.md
examples/ai_assistant_parsers_spbu/output/parse_one/fund_583ec62383/: meta.json  result.html  result.md
examples/ai_assistant_parsers_spbu/output/parse_one/guestbook_929d9bd874/: meta.json  result.html  result.md
examples/ai_assistant_parsers_spbu/output/parse_one/horizont_717080f05e/: meta.json  result.html  result.md
examples/ai_assistant_parsers_spbu/output/parse_one/hortus_cf0a9ea952/: meta.json  result.html  result.md
examples/ai_assistant_parsers_spbu/output/parse_one/ifea_2c824e1750/: meta.json  result.html  result.md
examples/ai_assistant_parsers_spbu/output/parse_one/library_c2b306bf35/: meta.json  result.html  result.md
examples/ai_assistant_parsers_spbu/output/parse_one/mil_f8236fe859/: meta.json  result.html  result.md
examples/ai_assistant_parsers_spbu/output/parse_one/nauka_95aa681916/: meta.json  result.html  result.md
examples/ai_assistant_parsers_spbu/sandbox/: basic.csv  parse_many.ipynb
examples/ai_assistant_parsers_spbu/sandbox/autostructure/: __init__.py
examples/ai_assistant_parsers_spbu/scripts/: mkinit.py  parse_one.py
examples/ai_assistant_parsers_spbu/src/ai_assistant_parsers_spbu/: __init__.py  settings.py
{{cookiecutter.project_slug}}/: .env  .env.example  .gitignore  README.md  README.rst  env.example  pyproject.toml
{{cookiecutter.project_slug}}/sandbox/: parse_many.ipynb
{{cookiecutter.project_slug}}/scripts/: mkinit.py  parse_many.py  parse_one.py
{{cookiecutter.project_slug}}/src/: settings.py
{{cookiecutter.project_slug}}/src/cli/: parse_one.py
{{cookiecutter.project_slug}}/src/cli/utils/: parsers.py
{{cookiecutter.project_slug}}/src/parsers/: __init__.py
{{cookiecutter.project_slug}}/src/parsers/domain/: abiturient.py  campus.py  pay.py  studsovet.py  www.py
{{cookiecutter.project_slug}}/src/parsers/multiple_domains/: tm_content.py
{{cookiecutter.project_slug}}/src/parsers/page/: _template.py  abiturient_main.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  settings.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/refiners/: _template.py
(+568 files in other folders)
