[tool.poetry]
version = "0.2.1"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
cookiecutter = "^2.6.0"

[tool.poetry.group.dev.dependencies]
ai-assistant-parsers-core = {git = "https://github.com/GigaUniversityData/ai_assistant_parsers_core"}
click = "^8.1.7"
fake-headers = "^1.0.2"
aiohttp = "^3.10.5"
sphinx = "^7"
sphinx-rtd-theme = "^2.0.0"
myst-parser = "^4.0.0"
mkinit = "^1.1.0"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
