[tool.poetry]
name = "{{cookiecutter.project_slug.replace('_', '-')}}"
version = "0.1.0"
description = ""
authors = ["{{cookiecutter.author}}"]
readme = "README.md"
packages = [{include = "{{cookiecutter.project_slug}}", from = "src"}]


[tool.poetry.dependencies]
python = "^3.12"
ai-assistant-parsers-core = {git = "https://github.com/GigaUniversityData/ai_assistant_parsers_core"}
click = "^8.1.7"
fake-headers = "^1.0.2"
aiohttp = "^3.10.5"
html5lib = "^1.1"


[tool.poetry.group.dev.dependencies]
mkinit = "^1.1.0"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
